# sequence-clustering

./: .gitignore  README.md  baseline-next-nearest.fasta  cluster_faiss.py  cluster_sequences.py  cluster_sequences2.py  cluster_sequences_faiss.py  cluster_sequences_lowmem.py  cluster_sequences_vectorized.py  pyproject.toml  setup.py  validate_pipelines.py
data/: example.fq  example_clustered_nearest.fasta
sequencing-preprocessing/: fastp_extract_25n.sh  fastp_extract_25n_summary.md
src/sequence_clustering/: __init__.py  __main__.py  cmd.py  dsu.py  dsu.pyx  io.py  levenshtein.py  types.py  utils.py  utils.pyx
test/: test_levenshtein.py
