[project]
name = "sequence-clustering"
version = "0.1.0"
description = "Small tool for clustering sequences"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Michael Innerberger", email = "innerbergerm@hhmi.org"},
]
requires-python = ">=3.12"
dependencies = [
    "polyleven>=0.9.0",
    "Cython>=3.0.0",
    "numpy>=2.3.3",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
]

[build-system]
requires = ["setuptools", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
